# supply-chain-factor-analysis

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_analysis.py
src/scfa/: __init__.py  fuzzy_micmac.py  ism.py  visualization.py
src/scfa/data/: bdrm.py  factors.py  fdrm.py  ssim.py
tests/: test_fuzzy_micmac.py  test_ism.py
